# Cortex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx-frontend.conf
cortex-backend/: aerich.toml  pyproject.toml  requirement.txt  start-mcp.sh
cortex-backend/alembic/: env.py
cortex-backend/alembic/versions/: 8699af6180f8_init_tables.py  ed506cc5cad7_refactor_models_split_files.py
cortex-backend/app/: db.py  main.py
cortex-backend/app/api/: deps.py
cortex-backend/app/api/v1/: api.py
cortex-backend/app/api/v1/endpoints/: login.py  organizations.py  (+5 more)
cortex-backend/app/core/: config.py  context.py  security.py
cortex-backend/app/models/: __init__.py  base.py  organization.py  project.py  project_member.py  task.py  user.py
cortex-backend/app/schemas/: organization.py  project.py  report.py  similarity.py  task.py  token.py  user.py
cortex-backend/app/services/: vector_store.py
cortex-backend/cli/: api.py  config.py  git.py  main.py
cortex-backend/cli/ai/: __init__.py  code_reviewer.py  service.py
cortex-backend/cli/commands/: __init__.py  auth.py  config.py  pr.py  review.py  tasks.py
cortex-backend/cli/providers/: __init__.py  base.py  github.py  gitlab.py
cortex-backend/cli/providers/pr_comment/: __init__.py  base.py  gitee.py  github.py
cortex-backend/cortex_mcp/: __init__.py  server.py
cortex-backend/migrations/models/: 0_20260118003630_init.py  1_20260118220021_update.py  3_20260125000220_None.py  4_20260223210500_add_task_comments.py  5_20260307190000_add_task_collaborators.py
cortex-backend/tests/: test_ai_doc_generation_helpers.py  test_cli_config_validation.py  test_cli_task_delete.py  test_cli_tasks_review_sync.py  test_project_management_endpoints.py  test_reports_endpoints.py  test_similarity_endpoints.py  test_task_assignment_collaborators.py  test_task_comments_endpoints.py  test_task_soft_delete_endpoints.py  test_vector_store_fallback.py
(+93 files in other folders)
