[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-cli"
version = "0.1.0"
description = "Cortex Project Manager CLI"
authors = [
  { name = "Your Name", email = "your@email.com" },
]
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "requests",
    "rich",
    "tortoise-orm",
    "asyncpg",
    "pydantic[email]",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pyjwt",
    "passlib",
    "bcrypt"
]

# 这里定义命令行入口
# 意思是：当用户输入 ctx 时，运行 cli.main 模块里的 app 对象
[project.scripts]
ctx = "cli.main:app"

[tool.setuptools.packages.find]
include = ["cli*", "app*"] # 包含 cli、app 包
[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
